--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": " cd api && node index.js",
     "dev": "cd api && nodemon index.js"
   },
-  "author": "harshada mali",
+  "author": "atharv wagh",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
